--- a/DAY-01/index.html
+++ b/DAY-01/index.html
@@ -46,12 +46,14 @@ Include:
 <I><h2>BIO:</h2></I>
 This is Uday Hada from Kota Rajasthan , currently student of NIT RAIPUR in IT department 1st year. I have done my schooling from Arcadia Academy Kota.
 .In respect to academics , I have am inclined towards Mathematics and have a decent grip over the subject ; thus leading to my interest in tech. field . My goal is to get a high paying job in IT field .
-<!--profile pic -->
+<!--profile pic 
+project section
+-->
 <BR/>
 
 Interests: Competitive programming,building up skills, mathematical problem-solving, sports.
 </p>
-<a href="about.html">About Me</a>
+<hr>
 
 <i><h2>SKILLS:</h2></i>
 
@@ -75,29 +77,41 @@ C++(Basic loops, arrays, pointers)</li></ul>
 
 <li>VS code in linux(WSL) environment with debugging</li>
 <li>Terminal usage (commands)</li>
-
-
-
 </ul>
-<ul></ul>
-<ul></ul>
-<ul></ul>
-<ul></ul>
-<ul></ul>
-
-
-
-
-
-
-
-
 </ol>
+<i><h2>PROJECTS:</h2></i>
+
+
+
+
+<hr>
+<i><h2>FREE RESOURCE (html):</h2> </i><!-- just for example-->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4?si=m4lmC3jkLu99mhxm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+
+<blockquote>
+        <p>
+            "I am a first-year engineering student focused on building strong fundamental in programming and maintaining daily consistency to grow as a developer."
+        </p>
+        <cite>— Uday Hada</cite>
+    </blockquote>
+
+
+
+
+
+
+
+
+
+
 
 	</main>
-
+<hr>
 	<footer>
-
+{ More about me :<a href="about.html">Click</a>}
 
 	</footer>
 </body>
