--- a/DAY-01/index.html
+++ b/DAY-01/index.html
@@ -42,6 +42,7 @@ Include:
 	<hr>
 	</header>
 	<main>
+		<image scr="image.jpg" alt="profile pic" width="200" ></image>
 <p>
 <I><h2>BIO:</h2></I>
 This is Uday Hada from Kota Rajasthan , currently student of NIT RAIPUR in IT department 1st year. I have done my schooling from Arcadia Academy Kota.
@@ -54,6 +55,7 @@ project section
 Interests: Competitive programming,building up skills, mathematical problem-solving, sports.
 </p>
 <hr>
+<image scr="image.jpg" alt="profile pic" width="200" ></image>
 
 <i><h2>SKILLS:</h2></i>
 
