--- a/DAY-01/about.html
+++ b/DAY-01/about.html
@@ -10,3 +10,51 @@ Include:
 
 
 	4.A link back to the Home page.  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
+<h2>About Me</h2>
+
+    <h3>My journey</h3>
+    <p>
+        I am 1st year engineering student actively working on building strong
+        fundamentals in programming and development. Through consistent practice,
+        daily challenges, and academic focus, I aim to improve my problem-solving
+        skills and become a successful software developer.
+    </p>
+
+    <!-- Definition List -->
+    <h3>My Strengths & Interests</h3>
+    <dl>
+        <dt>Consistency</dt>
+        <dd>I believe daily effort and discipline are key to long-term success.</dd>
+
+        <dt>Programming</dt>
+        <dd>Currently learning C/C++ and web development fundamentals.</dd>
+
+
+
+
+
+
+
+
+<a href="index.html">← Back to Home</a>
+</body>
+</html>
+	
+
+
+
+
+
+
+
+
+
