--- a/DAY-01/index.html
+++ b/DAY-01/index.html
@@ -42,8 +42,8 @@ Include:
 	<hr>
 	</header>
 	<main>
-		<image scr="https://github.com/UdayHada/30-days-of-code-tcp-2026/blob/main/DAY-01/image.jpg" alt="profile pic" width="200" ></image>
-		<image scr="profile.jpg" alt="profile pic" width="200" ></image>
+		<!-- <image scr="https://github.com/UdayHada/30-days-of-code-tcp-2026/blob/main/DAY-01/image.jpg" alt="profile pic" width="200" ></image> -->
+		<image scr="/profile.png" alt="profile pic" width="200" ></image>
 		
 <p>
 <I><h2>BIO:</h2></I>
