--- a/DAY-01/index.html
+++ b/DAY-01/index.html
@@ -43,7 +43,8 @@ Include:
 	</header>
 	<main>
 		
-		<image scr="/profile.png" alt="profile pic" width="200" ></image>
+		<img src="./profile.png" alt="Profile Picture" width="200">
+
 		
 <p>
 <I><h2>BIO:</h2></I>
